Adding subscription button

--- a/base_framework/index.html
+++ b/base_framework/index.html
@@ -180,6 +180,19 @@
             <div class="container">
                 <div class="box">
                     <h1>Base Framework</h1>
+                    <form action="/charge" method="POST">
+                      <script
+                        src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                        data-key="pk_test_HVQRqu6soQSF0G7fycqzz7cv"
+                        data-image="/img/documentation/checkout/marketplace.png"
+                        data-name="Hosting Package I"
+                        data-description="Hosting Subscription ($26/month)"
+                        data-panel-label="Subscribe to Package"
+                        data-label="Subscribe"      
+                        data-amount="2600"
+                        data-locale="auto">
+                      </script>
+                    </form>
                 </div>
             </div>
         </div>    
