ified:   js/global.js

--- a/base_framework/index.html
+++ b/base_framework/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Bespoke Framewrok v.0.1</title>
+    <title>Bespoke Framewrok v.1.1</title>
 
     <!-- CSS -->
     
@@ -21,27 +21,33 @@
 
     <!-- navbar -->
     <nav class="navbar navbar-default navbar-fixed-top navbar-list">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand logo" href="#">Bespoke Architecture</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
+        <div class="container">
+              <a class="navbar-brand logo" href="#">Bespoke Architecture</a>
+              <a href="#" data-activates="mobile-demo" class="button-collapse">       
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+            </a>
+
+          <ul class="nav navbar-nav navbar-right hide-on-med-and-down">
             <li><a href="../">Home</a></li>
             <li><a href="../">About Us</a></li>
             <li><a href="../">Contact <span class="sr-only"></span></a></li>
             <li class="sign-up"><a href="../"><span class="">Sign-Up</span></a>
             </li>  
           </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+
+          <ul class="side-nav" id="mobile-demo">
+            <li><a href="../">Home</a></li>
+            <li><a href="../">About Us</a></li>
+            <li><a href="../">Contact <span class="sr-only"></span></a></li>
+            <li><a href="../"><span class="">Sign-Up</span></a></li> 
+          </ul>
+        </div>
+    </nav>       
       
     <section class="bg-navy"> 
         <div class="hero">
