Removing Stripe button from footer

--- a/base_framework/index.html
+++ b/base_framework/index.html
@@ -185,8 +185,8 @@
         <div class="content--area2">
             <div class="container">
                 <div class="box">
-                    <h1>Base Framework</h1>
-                    <form action="/charge" method="POST">
+                    <h1>Base Framework Footer Content</h1>
+                    <!--<form action="/charge" method="POST">
                       <script
                         src="https://checkout.stripe.com/checkout.js" class="stripe-button"
                         data-key="pk_test_HVQRqu6soQSF0G7fycqzz7cv"
@@ -198,7 +198,7 @@
                         data-amount="2600"
                         data-locale="auto">
                       </script>
-                    </form>
+                    </form>-->
                 </div>
             </div>
         </div>    
